<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="620dp">

        <RelativeLayout
            android:id="@+id/pic_desc"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="14dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/pic_desc"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ques_desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_desc1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/ques_desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/question_desc2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/three_pyramids_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quiz_desc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:hint="@string/open_ques" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/forward"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="#1E88E5"
                android:text="@string/forward"
                android:textAllCaps="false"
                android:textColor="#E3F2FD" />

            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="#D32F2F"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="#FFEBEE" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>